<resources>
    <string name="app_name">Company Adda</string>
    <string name="openDrawer">open drawer</string>
    <string name="closeDrawer">close drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home"><b>Home</b></string>
    <string name="my_request"><b>My Request</b></string>
    <string name="offers"><b>Offers</b></string>
    <string name="profile"><b>Profile</b></string>

    <string name="Rs">\u20B9</string>
    <string name="rs">\u20A8</string>
    <string name="whatsapp"><b>WhatsApp</b></string>
    <string name="title_activity_upload_doc">UploadDoc</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="feed"><b>News</b></string>
</resources>