<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home_bottom_nav"
        android:icon="@drawable/home_image_icon"
        android:title="@string/home"/>
    <item
        android:id="@+id/building_bottom_nav"
        android:enabled="true"
        android:icon="@drawable/original_whatapp_icon"
        android:title="@string/whatsapp"/>

    <item
        android:id="@+id/feed"
        android:icon="@drawable/news_icons"
        android:title="@string/feed"/>

    <item
        android:id="@+id/more_bottom_nav"
        android:icon="@drawable/offer_image_icon"
        android:title="@string/offers"/>


    <item
        android:id="@+id/profile_bottom_nav"
        android:icon="@drawable/person_image_icon"
        android:title="@string/profile"/>

</menu>